--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,29 @@
 body{
   background-color: #222222;
 }
-.navbar-default{
-  background-color: #212121;
-  border-color:#212121;
-  //border-color:#ffffff;
-  margin-bottom:0;
-  width:520px;
-  margin:0 auto;
+
+.navbar-default {
+    border-color:#222222;
+    height: 115px;
+    background-color:#222222;
+    opacity: 0.85;
 }
+div#myNavbar.container-fluid{
+    text-align: center;
+}
+
+#selected{
+  padding-top: 0px;
+}
+
+ul.nav.navbar-nav{
+    display: inline-block;
+    float: none;
+}
+ul.nav.navbar-nav> li{
+  padding-top:35px;
+}
+
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
@@ -49,6 +64,19 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
     font-weight: 700;
 }
 
+/*
+------> *** <------
+    HOME segment
+------> *** <------
+                    */
+.home-master{
+  //border:3px solid white;
+  height: 1600px;
+  width: 1000px;
+  display:block;
+  margin:10% auto;
+}
+
 .carousel-indicators li{
     background-color:#f27752;
     border-color:#f27752;
@@ -61,11 +89,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   width:17px;
   height:17px;
 }
-#logo img{
-  display:block;
-  margin:0 auto;
-  max-width: 100%;
-}
+
 
 .carousel-inner img{
   display:block;
@@ -79,21 +103,26 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
     MENU segment
 ------> *** <------
                     */
+.menuMaster{
+  //border:3px solid white;
+  height: 3500px;
+  width: 1000px;
+  display:block;
+  margin:15% auto;
+}
+
 .outer{
   //border: 4px solid white ;
-  padding: 10px;
   margin-top:5%;
-  display:block;
-  margin:5% auto 10%;
-  height:40%;
+  margin:0 auto 20%;
+  height:auto;
   width: 58%;
-  display: block;
 }
 
 .centerdiv > div{
+  //border: 4px solid white ;
   display: inline-block;
   padding: 2%;
-  position: relative;
   margin:0 auto;
 }
 
@@ -126,7 +155,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   //border: 2px solid green ;
   height:900px;
   margin:0 auto;
-  max-width: 65%;
+  max-width: 100%;
 }
 
 .coffeemenu{
@@ -175,7 +204,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
 //border: 10px solid green ;
   width: 100%;
   height:800px;
-  max-width: 65%;
+  max-width: 100%;
   margin:auto;
 }
 
@@ -222,7 +251,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   //border: 2px solid green ;
   height:430px;
   margin: auto;
-  max-width: 65%;
+  max-width: 100%;
 }
 
 .teamenu{
@@ -269,7 +298,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   //border: 10px solid green ;
   width: 100%;
   height:800px;
-  max-width: 65%;
+  max-width: 100%;
   margin: auto;
 }
 
@@ -321,7 +350,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   height: 1600px;
   width: 1000px;
   display:block;
-  margin:0 auto;
+  margin:10% auto;
 }
 
 .historyHeader{
@@ -374,10 +403,11 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
 ------> *** <------
                     */
 .galeryMaster{
-  //border:3px solid white;
-  height: 1500px;
-  width: 1000px;
-  margin:0 auto;
+    //border:3px solid white;
+    height: 1600px;
+    width: 1000px;
+    display:block;
+    margin:10% auto;
 }
 .gal1{
   //border:3px solid white;
@@ -399,26 +429,26 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   float:right;
 }
 .gal4{
-  //border:3px solid orange;
+  border:3px solid orange;
   height: auto;
   width: 30%;
   float:left;
 }
 .gal5{
-  //border:3px solid blue;
+  border:3px solid blue;
   height: auto;
   width: 30%;
   float:left;
 }
 .gal6{
-  //border:3px solid white;
+  border:3px solid white;
   height: auto;
     width: 40%;
   float:right;
 }
 
 .gal7{
-  //border:3px solid white;
+  border:3px solid white;
   height: auto;
   width: 60%;
   float:right;
@@ -435,7 +465,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   height: 800px;
   width: 1100px;
   display:block;
-  margin:0 auto;
+  margin:10% auto;
 }
 
 .copperMap{
