--- a/css/custom.css
+++ b/css/custom.css
@@ -16,18 +16,11 @@ div#myNavbar.container-fluid{
   padding-top: 0px;
 }
 
-.socialList li {
-    float: left;
-}
-.socialList li a {
-  padding-right:10px;
-  display:block;
-  float: none;
-}
 ul.nav.navbar-nav{
     display: inline-block;
     float: none;
 }
+
 ul.nav.navbar-nav> li{
   padding-top:35px;
 }
@@ -57,6 +50,7 @@ ul.nav.navbar-nav> li{
   font-family: Papyrus, fantasy;
   padding: 15px;
   font-weight: 700;
+  border-radius:10%;
 }
 
 li.dropdown:hover > .dropdown-menu {
@@ -117,9 +111,14 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   height:60px;
   margin:0 auto;
 }
+
 ul.socialList {
   padding-top:10px;
   list-style-type: none;
+  display:inline-block;
+}
+ul.socialList>li{
+  float:left;
 }
 
 .btn-twitter{
@@ -176,10 +175,10 @@ ul.socialList {
                     */
 .home-master{
   //border:3px solid white;
-  height: 570px;
-  width: 1000px;
+  height: auto;
+  width: auto;
   display:block;
-  margin:200px auto 70px;
+  margin: 200px auto 0;
 }
 
 .carousel-indicators li{
@@ -208,241 +207,107 @@ ul.socialList {
     MENU segment
 ------> *** <------
                     */
-.menuMaster{
-  //border:3px solid white;
-  height: 3000px;
-  width: 1000px;
+.menuHeader{
+  border:5px solid white;
+  height: 200px;
+  width: auto;
   display:block;
-  margin:200px auto 70px;
 }
 
-.outer{
-  //border: 4px solid white ;
-  margin-top:5%;
-  margin:0 auto 20%;
-  height:auto;
-  width: 58%;
+.menuNav{
+    background-color: #22222;
+    //border:3px solid yellow;
+    width: 550px;
+    height: 50px;
+    margin: 80px auto 10px;
 }
 
-.centerdiv > div{
-  //border: 4px solid white ;
+div#myNavbar2.container-fluid{
+    text-align: center;
+}
+
+ul.#nav2{
   display: inline-block;
-  padding: 2%;
-  margin:0 auto;
+  float: none;
+}
+ul.#nav2>li{
+  padding:0px;
 }
 
-.centerdiv > div > b{
-  color:#ffffff;
-  left: 41%;
-  position: absolute;
-  bottom: 2%;
-  font-family: 'Raleway',sans-serif;
+.navbar-inverse {
+    border-color:#222222;
+    height: 85px;
+    background-color:#222222;
+    opacity: 0.85;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+  color:  #ffffff;
+  font-size: 120%;
+  //font-family: 'Raleway',sans-serif;
+  font-family: Papyrus, fantasy;
   font-weight: 700;
+  border-radius:10%;
 }
 
-#pic1 :hover{
-    -webkit-box-shadow: 0px 0px 100px 0px #e7d2d8;
+.navbar-inverse .navbar-nav > li > a:hover,
+.navbar-inverse .navbar-nav > li > a:focus {
+  text-shadow: 0px 0px 30px  #bc462a;
+  color:#f27752;
 }
 
-#pic2 :hover{
-    -webkit-box-shadow: 0px 0px 100px 0px #bc462a;
+.menuMaster{
+  border:6px solid white;
+  height: 1000px;
+  width: 1200px;
+  display:block;
+  margin:20px auto 70px;
 }
-
-#pic3 :hover{
-    -webkit-box-shadow: 0px 0px 100px 0px #774162;
-}
-
-#pic4 :hover{
-    -webkit-box-shadow: 0px 0px 100px 0px #e4d58a;
-}
-
-.coffee{
-  //border: 2px solid green ;
-  height:900px;
-  margin:0 auto;
-  max-width: 100%;
-}
-
-.coffeemenu{
-  //border: 10px solid red;
-  width: 40%;
-  height:100%;
+#item1{
+  border:6px solid red;
+  height: 350px;
+  width: 300px;
   float:left;
+  margin: 35px 45px;
 }
-
-.coffeemenu ul{
-  font-family: Papyrus, fantasy;
-  list-style-type: none;
-  padding-top: 10px;
-  margin-left:3%;
-  font-size: 300%;
-  padding-top: 10px;
-}
-
-#coffeeHeader li{
-    color:#f27752;
-}
-
-#coffeeMenuItems li{
-    color:#ffffff;
-    padding-top:30px;
-    padding-left: 15px;
-}
-
-.cofeepic{
-  width: 60%;
-  height:100%;
-  //border: 10px solid white ;
-  padding-top:10%;
-  float:right;
-  margin:0 auto;
-}
-
-#coffee1{
+#item2{
+  border:6px solid white;
+  height: 350px;
+  width: 300px;
   float:left;
-  max-width: 100%;
-  max-height: 100%;
-  padding :10%;
+  margin: 35px 45px;
 }
 
-.smoothie{
-//border: 10px solid green ;
-  width: 100%;
-  height:800px;
-  max-width: 100%;
-  margin:auto;
-}
-
-.smoothiemenu{
-  //border: 10px solid red ;
-  width: 40%;
-  height:100%;
-  float:right;
-}
-
-.smoothiemenu ul{
-  font-family: Papyrus, fantasy;
-  list-style-type: none;
-  padding-top: 10px;
-  margin-left:3%;
-  font-size: 300%;
-}
-
-
-#smoothieHeader li{
-    color:#f27752;
-}
-
-#smoothieMenuItems li{
-    color:#ffffff;
-    padding-top:30px;
-    padding-left: 15px;
-}
-
-.smoothiePic{
-  width: 60%;
-  height:100%;
-  //border: 20px solid white ;
+#item3{
+  border:6px solid yellow;
+  height: 350px;
+  width: 300px;
   float:left;
+  margin: 35px 45px;
 }
 
-#smoothie1{
-  max-width: 100%;
-  max-height: 100%;
-  padding :10%;
-}
-
-.tea{
-  //border: 2px solid green ;
-  height:430px;
-  margin: auto;
-  max-width: 100%;
-}
-
-.teamenu{
-  //border: 3px solid white ;
-  width: 45%;
-  height:100%;
+#item4{
+  border:6px solid green;
+  height: 350px;
+  width: 300px;
   float:left;
-}
-.teapic{
-  width: 55%;
-  height:100%;
-  //border: 20px solid white ;
-  float:right;
+  margin: 35px 45px;
 }
 
-#tea1{
-  max-width: 100%;
-  max-height: 100%;
-  padding :10%;
-}
-.teamenu ul{
-  font-family: Papyrus, fantasy;
-  list-style-type: none;
-  padding-top: 10px;
-  margin-top: -1px;
-  margin-left:3%;
-  font-size: 300%;
-  padding-top: 10px;
-}
-
-#teaHeader li{
-    color:#f27752;
-}
-
-#teaMenuItems li{
-    color:#ffffff;
-    padding-top:5px;
-    padding-left: 15px;
-    padding-top:30px;
-}
-
-
-.donut{
-  //border: 10px solid green ;
-  width: 100%;
-  height:600px;
-  max-width: 100%;
-  margin: auto;
-}
-
-.donutmenu{
-  //border: 10px solid red ;
-  width: 40%;
-  height:100%;
-  float:right;
-}
-
-.donutmenu ul{
-  font-family: Papyrus, fantasy;
-  list-style-type: none;
-  padding-top: 10px;
-  margin-left:3%;
-  font-size: 300%;
-}
-
-#donutHeader li{
-    color:#f27752;
-}
-
-#donutMenuItems li{
-    color:#ffffff;
-    padding-top:30px;
-    padding-left: 15px;
-}
-
-.donutpic{
-  width: 60%;
-  height:100%;
-  //border: 20px solid white ;
+#item5{
+  border:6px solid blue;
+  height: 350px;
+  width: 300px;
   float:left;
+  margin: 35px 45px;
 }
 
-#donut1{
-  max-width: 100%;
-  max-height: 100%;
-  padding :10%;
+#item6{
+  border:6px solid white;
+  height: 350px;
+  width: 300px;
+  float:left;
+  margin: 35px 45px;
 }
 
 /*
@@ -450,6 +315,7 @@ ul.socialList {
     ABOUT segment
 ------> *** <------
                     */
+
 .aboutMaster{
   //border:3px solid white;
   height: 1200px;
