menu variations view in progress

--- a/css/custom.css
+++ b/css/custom.css
@@ -207,6 +207,56 @@ ul.socialList>li{
     MENU segment
 ------> *** <------
                     */
+
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.8); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+}
+
+#variationDisplay{
+    position: absolute;
+    top: 58%;
+    left: 50%;
+    font-size: 2em;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    background-color: #f27752;
+    height: 80%;
+    width: 70%;
+}
+
+#variationScroller{
+  width:100%;
+  height:100%;
+  /*margin-top:100px;*/
+  background-color:#222222;
+  float:left;
+  overflow-y:scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+.variationSide{
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  padding:0;
+}
+
 .menuHeader{
   border:5px solid white;
   height: 200px;
