converted width attribute of menu navigation to em instead of px
The menu navigation was being displayed on two lines on my screen,
because the width was defined in px instead of em.

--- a/css/custom.css
+++ b/css/custom.css
@@ -297,7 +297,7 @@ ul.socialList>li{
 .menuNav{
     background-color: #22222;
     //border:3px solid yellow;
-    width: 550px;
+    width: 50em;
     height: 50px;
     margin: 80px auto 10px;
 }
