--- a/css/custom.css
+++ b/css/custom.css
@@ -289,7 +289,7 @@ ul.socialList>li{
 
 .menuHeader{
   //border:5px solid white;
-  height: 200px;
+  height: auto;
   width: auto;
   display:block;
 }
@@ -298,7 +298,7 @@ ul.socialList>li{
     background-color: #22222;
     //border:3px solid yellow;
     width: 50em;
-    height: 50px;
+    height: auto;
     margin: 80px auto 10px;
 }
 
