--- a/css/custom.css
+++ b/css/custom.css
@@ -74,16 +74,26 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   width:100%;
   height:300px;
   //border:3px solid white;
+  margin: 50px auto 0;
+  display:block;
   text-align: center;
 }
 
+.wrapper{
+// border:3px solid white;
+  width:700px;
+  height:300px;
+  margin: 0 auto;
+
+}
+
 .contactUs, .followUs{
+  padding-top:70px;
   width:300px;
   height:220px;
-  display: inline-block;
-  margin: 40px 10px;
+  float:left;
+  margin: 20px 20px;
   //border:3px solid red;
-  text-align: left;
 }
 
 
@@ -236,7 +246,7 @@ ul.socialList>li{
 }
 
 #o1{
-  border: 5px solid white;
+  border: 5px solid #f27752;
   background-color:#222222;
   width:30%;
   height:500px;
@@ -269,7 +279,7 @@ ul.socialList>li{
   Width:200px;
   height:100px;
   margin:-10px;
-  //border: 4px solid white;
+//border: 4px solid #f27752;
 }
 
 #closeBtn>button{
@@ -279,11 +289,11 @@ ul.socialList>li{
 }
 
 #o2{
-    border: 5px solid red;
+    border: 5px solid #f27752;
     background-color:#222222;
     font-family: Papyrus,Script,serif;
     width:70%;
-    height:100%;
+    height:500px;
     float:left;
     display:block;
 }
@@ -475,7 +485,27 @@ ul.#nav2>li{
   font-family:Papyrus,Script,serif;
   font-weight: 700;
 }
-.btn-warning:hover{
+.btn-warning:hover,
+.btn-warning:focus,
+.btn-warning:active{
+  background-color: #ffffff;
+  border-color:  #f27752;
+  color:#f27752;
+  -webkit-box-shadow: 0px 0px 20px 0px #bc462a;
+  border-color:#ffffff;
+  font-family:Papyrus,Script,serif;
+  font-weight: 700;
+}
+
+.btn-warning:active:hover,
+.btn-warning.active:hover,
+.open > .dropdown-toggle.btn-warning:hover,
+.btn-warning:active:focus,
+.btn-warning.active:focus,
+.open > .dropdown-toggle.btn-warning:focus,
+.btn-warning:active.focus,
+.btn-warning.active.focus,
+.open > .dropdown-toggle.btn-warning.focus {
   background-color: #ffffff;
   border-color:  #f27752;
   color:#f27752;
