--- a/css/custom.css
+++ b/css/custom.css
@@ -297,7 +297,7 @@ ul.socialList>li{
 .menuNav{
     background-color: #22222;
     //border:3px solid yellow;
-    width: 50em;
+    width: 550px;
     height: 50px;
     margin: 80px auto 10px;
 }
