--- a/css/custom.css
+++ b/css/custom.css
@@ -230,8 +230,8 @@ ul.socialList>li{
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     background-color: #222222;
-    height: 80%;
-    width: 80%;
+    height: 800px;
+    width: 1500px;
     display:block;
 }
 
@@ -239,7 +239,7 @@ ul.socialList>li{
   border: 5px solid white;
   background-color:#222222;
   width:30%;
-  height:100%;
+  height:800px;
   overflow: scroll;
   float:left;
 }
@@ -268,10 +268,6 @@ ul.socialList>li{
     background-color: #f27752;
 
     color: white;
-}
-
-#overlayclosebutton {
-    float: right;
 }
 
 ::-webkit-scrollbar {
