--- a/css/custom.css
+++ b/css/custom.css
@@ -31,11 +31,13 @@ ul.nav.navbar-nav> li{
   -webkit-box-shadow: 0px 0px 30px 0px #bc462a;
   color: #ffffff;
   background-color: #f27752;
-  font-size: 90%;
-  //font-family: 'Raleway',sans-serif;
-  font-family: Papyrus,Script,serif;
+  /*font-size: 90%;*/
+  /*font-family: 'Raleway',sans-serif;*/
+  /*font-family: Papyrus,Script,serif;*/
+  font-family: 'Philosopher';
+  font-size: 1.25em;
   padding: 15px;
-  font-weight: 700;
+  /*font-weight: 700;*/
 
 }
 .navbar-default .navbar-nav > li > a:hover,
@@ -45,11 +47,12 @@ ul.nav.navbar-nav> li{
 }
 .navbar-default .navbar-nav > li > a {
   color:  #ffffff;
-  font-size: 90%;
-  //font-family: 'Raleway',sans-serif;
-  font-family: Papyrus,Script,serif;
+  /*font-size: 90%;*/
+  /*font-family: 'Raleway',sans-serif;*/
+  font-family: 'Philosopher';
+   font-size: 1.25em;
   padding: 15px;
-  font-weight: 700;
+  /*font-weight: 700;*/
   border-radius:10%;
 }
 
@@ -101,7 +104,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   //border:3px solid white;
   text-align: center;
   vertical-align: middle;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#f27752;
   font-size: 150%;
 }
@@ -111,7 +114,7 @@ li.dropdown:hover > .dropdown-menu li > a:focus{
   text-align: center;
   vertical-align: middle;
   margin-top:10px;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#ffffff;
   font-size: 120%;
 }
@@ -126,6 +129,7 @@ ul.socialList {
   padding-top:10px;
   list-style-type: none;
   display:inline-block;
+  padding-left: 0;
 }
 ul.socialList>li{
   float:left;
@@ -165,7 +169,7 @@ ul.socialList>li{
   //border:3px solid white;
   text-align: center;
   vertical-align: middle;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#f27752;
   font-size: 150%;
 }
@@ -174,7 +178,7 @@ ul.socialList>li{
   text-align: center;
   vertical-align: middle;
   margin-top:10px;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#ffffff;
   font-size: 120%;
 }
@@ -233,15 +237,15 @@ ul.socialList>li{
 
 #variationDisplay{
     position: absolute;
-    top: 48%;
+    top: 50%;
     left: 50%;
     font-size: 2em;
     color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     background-color: #222222;
-    height: 500px;
-    width: 1500px;
+    height: 78%;
+    width: 80%;
     display:block;
 }
 
@@ -249,7 +253,7 @@ ul.socialList>li{
   border: 5px solid #f27752;
   background-color:#222222;
   width:30%;
-  height:500px;
+  height:100%;
   overflow: scroll;
   float:left;
 }
@@ -259,7 +263,7 @@ ul.socialList>li{
     color: #ffffff;
     font-size:120%;
     display: block;
-    font-family: Papyrus,Script,serif;
+    font-family: 'Philosopher';
     padding: 12px;
     text-decoration: none;
 }
@@ -274,11 +278,11 @@ ul.socialList>li{
 }
 #closeBtn{
   position:absolute;
-  right:170px;
+  right:10em;
   bottom:0;
-  Width:200px;
-  height:100px;
-  margin:-10px;
+  /*Width:200px;
+  height:100px;*/
+  /*margin:-10px;*/
 //border: 4px solid #f27752;
 }
 
@@ -291,29 +295,30 @@ ul.socialList>li{
 #o2{
     border: 5px solid #f27752;
     background-color:#222222;
-    font-family: Papyrus,Script,serif;
+    font-family: 'Philosopher';
     width:70%;
-    height:500px;
+    height:100%;
     float:left;
     display:block;
+    padding: 1.25em;
 }
 .nameDescription{
   color: #f27752;
-  font-family: Papyrus,Script,serif;
+  font-family: 'Philosopher';
   font-size: 220%;
   padding-bottom: 20px;
   float:left;
 }
 .smlDescription{
   padding-left:70px;
-  font-family: Papyrus,Script,serif;
+  font-family: 'Philosopher';
   font-size: 180%;
   float:left;
 }
 
 .smlPrice{
   padding-top:50px;
-  font-family: Papyrus,Script,serif;
+  font-family: 'Philosopher';
   font-size: 150%;
   float:right;
 }
@@ -369,7 +374,7 @@ ul.#nav2>li{
   color:  #ffffff;
   font-size: 120%;
   //font-family: 'Raleway',sans-serif;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   font-weight: 700;
   border-radius:10%;
 }
@@ -439,7 +444,7 @@ ul.#nav2>li{
   color:#f27752;
   font-size: 200%;
   font-weight: 700;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   margin: 10px auto;
 }
 .submenuDescription{
@@ -448,14 +453,14 @@ ul.#nav2>li{
   height:auto;
   font-size: 150%;
   width:auto;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   margin: 10px auto;
 }
 .submenuPrice{
   //border:3px solid yellow;
   color:#ffffff;
   text-align: right;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   margin: 10px auto 20px;
 }
 
@@ -470,7 +475,7 @@ ul.#nav2>li{
   font-size: 280%;
   font-weight: 700;
   text-align: center;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
 }
 
 .btnContainer{
@@ -483,7 +488,7 @@ ul.#nav2>li{
 .btn-warning{
   background-color: #f27752;
   border-color:  #f27752;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   font-weight: 700;
 }
 .btn-warning:hover,
@@ -494,7 +499,7 @@ ul.#nav2>li{
   color:#f27752;
   -webkit-box-shadow: 0px 0px 20px 0px #bc462a;
   border-color:#ffffff;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   font-weight: 700;
 }
 
@@ -512,7 +517,7 @@ ul.#nav2>li{
   color:#f27752;
   -webkit-box-shadow: 0px 0px 20px 0px #bc462a;
   border-color:#ffffff;
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   font-weight: 700;
 }
 /*
@@ -530,14 +535,14 @@ ul.#nav2>li{
 }
 
 .historyHeader{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#f27752;
   font-size: 400%;
   padding-top:100px;
 }
 
 .historyList{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#ffffff;
   font-size: 200%;
   padding-top:10px;
@@ -545,14 +550,14 @@ ul.#nav2>li{
 }
 
 .offerHeader{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#f27752;
   font-size: 400%;
   padding-top: 50px;
 }
 
 .offerList{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#ffffff;
   font-size: 200%;
   padding-top:10px;
@@ -560,14 +565,14 @@ ul.#nav2>li{
 }
 
 .achieveHeader{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#f27752;
   font-size: 400%;
   padding-top: 50px;
 }
 
 .achieveList{
-  font-family:Papyrus,Script,serif;
+  font-family:'Philosopher';
   color:#ffffff;
   font-size: 200%;
   padding-top:10px;
@@ -578,7 +583,7 @@ ul.#nav2>li{
     GALERY segment
 ------> *** <------
                     */
-.galeryMaster{
+.galleryMaster{
     //border:3px solid white;
     height: 900px;
     width: 1000px;
@@ -605,26 +610,26 @@ ul.#nav2>li{
   float:right;
 }
 .gal4{
-  border:3px solid orange;
+  /*border:3px solid orange;*/
   height: auto;
   width: 30%;
   float:left;
 }
 .gal5{
-  border:3px solid blue;
+  /*border:3px solid blue;*/
   height: auto;
   width: 30%;
   float:left;
 }
 .gal6{
-  border:3px solid white;
+  /*border:3px solid white;*/
   height: auto;
     width: 40%;
   float:right;
 }
 
 .gal7{
-  border:3px solid white;
+  /*border:3px solid white;*/
   height: auto;
   width: 60%;
   float:right;
@@ -656,11 +661,11 @@ ul.#nav2>li{
 }
 
 .mapText{
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#f27752;
   font-size: 200%;
   padding-bottom:20px;
-  padding-left:50px;
+  /*padding-left:0em;*/
 }
 
 .address{
@@ -675,19 +680,21 @@ ul.#nav2>li{
     //border:3px solid white;
     height: auto;
     width: 100%;
-    font-family: Papyrus, fantasy;
+    font-family: 'Philosopher';
     color:#f27752;
     float: left;
+    font-size: 1.25em;
 }
 
 .addressInfo{
 //border:3px solid green;
   height: auto;
   width: 100%;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#ffffff;
   float: left;
   padding-top:20px;
+  font-size: 1.25em;
 }
 
 .hours{
@@ -700,27 +707,30 @@ ul.#nav2>li{
 //border:3px solid white;
   height: auto;
   width: 100%;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#f27752;
   float: left;
+  font-size: 1.25em;
 }
 
 .hoursFirst{
   //border:3px solid green;
   height: auto;
   width: 30%;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#ffffff;
   float: left;
   padding-top:20px;
+  font-size: 1.25em;
 }
 
 .hourSecond{
   //border:3px solid green;
   height: auto;
   width: 70%;
-  font-family: Papyrus, fantasy;
+  font-family: 'Philosopher';
   color:#ffffff;
   float: right;
   padding-top:20px;
+  font-size: 1.25em;
 }
